--- a/outside-hacks/Base.lproj/Main.storyboard
+++ b/outside-hacks/Base.lproj/Main.storyboard
@@ -238,8 +238,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <segue destination="RdG-4R-JjQ" kind="unwind" identifier="unwindSegueToFriendListViewController" unwindAction="unwindToFriendList:" id="nTU-XJ-vld"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZGZ-br-Ecm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="RdG-4R-JjQ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1377" y="526"/>
         </scene>
